fix: query params

--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
 
             let newHash = '?' + newUrl;
 
-            window.location.href = window.location.href.split('#')[0] + newHash;
+            window.location.href = window.location.href.split('?')[0] + newHash;
         }
     
         function dispatchReactUnityEvent(eventName, ...parameters) {
